# rustypyxl

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO_MEMORY_OPTIMIZATION.md  pyproject.toml  rustypyxl.pyi  sonar-project.properties
.github/workflows/: ci.yml  fuzz.yml  publish.yml  sonarcloud.yml
benchmarks/: compare_calamine.py  compare_openpyxl.py  memory_benchmark.py  reproduce_readme.py
rustypyxl-core/: Cargo.toml  README.md
rustypyxl-core/benches/: excel_creation.rs
rustypyxl-core/fuzz/: Cargo.toml
rustypyxl-core/fuzz/fuzz_targets/: fuzz_coordinates.rs  fuzz_load.rs  fuzz_roundtrip.rs  fuzz_xml.rs
rustypyxl-core/src/: autofilter.rs  cell.rs  chart.rs  chart_writer.rs  conditional.rs  crypto.rs  drawing_writer.rs  error.rs  formula.rs  image.rs  lib.rs  numfmt.rs  pagesetup.rs  parquet_import.rs  pivot.rs  rich_text.rs  s3.rs  streaming.rs  style.rs  table.rs  utils.rs  workbook.rs  worksheet.rs  writer.rs
rustypyxl-core/tests/: autofit.rs  boolean_roundtrip.rs  charts.rs  compression_test.rs  decrypt.rs  encrypt.rs  feature_roundtrip.rs  formula_eval.rs  images.rs  integration.rs  parser_edge_cases.rs  pivot_create.rs  pivot_read.rs  pivot_roundtrip.rs  rich_text.rs  shift_rows_cols.rs  writer_sanitization.rs
rustypyxl-core/tests/fixtures/: encrypted.xlsx
rustypyxl-pyo3/: Cargo.toml
rustypyxl-pyo3/src/: cell.rs  dimensions.rs  lib.rs  streaming.rs  style.rs  workbook.rs  worksheet.rs
tasks/: 001_lossy_roundtrip.done.md  001_lossy_roundtrip.in-progress.md  002_pyo3_stale_handle_model.done.md  002_pyo3_stale_handle_model.md  003_ci_test_fixtures.done.md  003_ci_test_fixtures.md  004_conditional_formatting_dxfs.done.md  004_conditional_formatting_dxfs.md  005_core_styling_silent_noop.done.md  005_core_styling_silent_noop.md  006_parquet_type_fidelity.done.md  006_parquet_type_fidelity.md  007_s3_async_panic.done.md  007_s3_async_panic.md  008_streaming_multisheet.done.md  008_streaming_multisheet.md  009_openpyxl_compat_gaps.done.md  009_openpyxl_compat_gaps.md  010_release_chores.done.md  010_release_chores.md  011_future_ci_improvements.md  012_load_parser_cell_placement.md  013_writer_xml_sanitization.md  014_feature_roundtrip_losses.md  015_parquet_int64_precision.md  016_pyo3_correctness.md  017_core_perf_hotpaths.md  018_pyo3_perf_gil.md
tests/: conftest.py  test_autofilter.py  test_autofilter_api.py  test_autofit.py  test_bytes_io.py  test_cell.py  test_charts.py  test_comments.py  test_conditional_api.py  test_conditional_formatting.py  test_data_validation_api.py  test_datetime_and_compat.py  test_decrypt.py  test_dimensions.py  test_encrypt.py  test_encrypt_interop.py  test_formula.py  test_formula_v2.py  test_formulas.py  test_handle_stability.py  test_hyperlinks.py  test_images.py  test_merged_cells.py  test_named_ranges.py  test_numfmt.py  test_openpyxl_api_compat.py  test_openpyxl_compat.py  test_pagesetup_api.py  test_parquet.py  test_pivot.py  test_protection.py  test_protection_api.py  test_pyo3_correctness.py  test_review_fixes.py  test_rich_text.py  test_roundtrip.py  test_roundtrip_structure.py  test_sheet_operations.py  test_streaming.py  test_style_roundtrip.py  (+6 more)
