[workspace]
members = ["rustypyxl-core", "rustypyxl-pyo3"]
resolver = "2"

[workspace.package]
version = "0.5.0"
edition = "2021"
authors = ["Eve Freeman"]
license = "MIT"
repository = "https://github.com/freeeve/rustypyxl"

[workspace.dependencies]
zip = "2.2"
quick-xml = "0.37"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
# abi3-py310: build against CPython's stable ABI, so one wheel per platform
# covers 3.10 and every version after it, including versions not yet released.
#
# The stable ABI withholds the C datetime API, but that costs nothing here: the
# datetime path already goes through the datetime module rather than PyDateTime
# types (see is_datetime_like), so it is the same code either way. Bulk writes
# and the pure-Rust paths measured identical to per-version builds; the datetime
# conversion path was not measurable cleanly and is the one place to check first
# if this ever looks slow.
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py310"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
