[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rustypyxl"
version = "0.3.0"
description = "A fast, Rust-powered Excel xlsx library for Python with openpyxl-compatible API"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Eve Freeman", email = "eve.freeman@gmail.com" }
]
keywords = ["excel", "xlsx", "spreadsheet", "openpyxl", "rust", "performance"]
requires-python = ">=3.10,<3.15"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/freeeve/rustypyxl"
Repository = "https://github.com/freeeve/rustypyxl"
Issues = "https://github.com/freeeve/rustypyxl/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "rustypyxl"
manifest-path = "rustypyxl-pyo3/Cargo.toml"

[tool.coverage.run]
source = ["rustypyxl"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

