[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rustypyxl"
version = "0.7.0"
description = "A fast, Rust-powered Excel xlsx library for Python with openpyxl-compatible API"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Eve Freeman", email = "eve.freema@gmail.com" }
]
keywords = ["excel", "xlsx", "spreadsheet", "openpyxl", "rust", "performance"]
# No upper bound: the wheels are abi3 (built for CPython 3.10's stable ABI), so
# they load on Python versions released after this one without a new build. An
# upper cap would throw that away by making pip refuse to install on them.
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/freeeve/rustypyxl"
Repository = "https://github.com/freeeve/rustypyxl"
Issues = "https://github.com/freeeve/rustypyxl/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "rustypyxl"
manifest-path = "rustypyxl-pyo3/Cargo.toml"

[tool.pytest.ini_options]
markers = [
    "slow: long-running tests (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["rustypyxl"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

