[package]
name = "rustypyxl-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core Rust library for reading and writing Excel xlsx files"

[dependencies]
zip = { workspace = true }
quick-xml = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
itoa = "1.0"
ryu = "1.0"
rayon = "1.10"
pprof = { version = "0.15", optional = true, features = ["flamegraph", "protobuf-codec"] }
ahash = { version = "0.8", optional = true }
hashbrown = { version = "0.14", optional = true }
parquet = { version = "54", optional = true, default-features = false, features = ["arrow", "snap", "zstd", "lz4", "flate2"] }
arrow = { version = "54", optional = true, default-features = false }

# S3 support (optional)
aws-sdk-s3 = { version = "1", optional = true }
aws-config = { version = "1", optional = true, features = ["behavior-version-latest"] }
tokio = { version = "1", optional = true, features = ["rt-multi-thread"] }

[dev-dependencies]
criterion = "0.5"
tempfile = "3.14"

[features]
default = ["fast-hash"]
bench = []
pprof = ["dep:pprof"]
fast-hash = ["dep:ahash", "dep:hashbrown"]
parquet = ["dep:parquet", "dep:arrow"]
s3 = ["dep:aws-sdk-s3", "dep:aws-config", "dep:tokio"]

[[bin]]
name = "profile_read"
path = "src/bin/profile_read.rs"
required-features = ["pprof"]

[[bin]]
name = "profile_write"
path = "src/bin/profile_write.rs"
required-features = ["pprof"]

[[bench]]
name = "excel_creation"
harness = false
