[package]
name = "rustypyxl"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Fast, dependency-light Rust library for reading and writing Excel (XLSX) files"
readme = "README.md"
homepage = "https://github.com/freeeve/rustypyxl"
documentation = "https://docs.rs/rustypyxl"
keywords = ["excel", "xlsx", "spreadsheet", "ooxml", "office"]
categories = ["parser-implementations", "encoding"]

[dependencies]
zip = { workspace = true }
quick-xml = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
itoa = "1.0"
ryu = "1.0"
rayon = "1.10"
pprof = { version = "0.15", optional = true, features = ["flamegraph", "protobuf-codec"] }
ahash = { version = "0.8", optional = true }
hashbrown = { version = "0.14", optional = true }
parquet = { version = "54", optional = true, default-features = false, features = ["arrow", "snap", "zstd", "lz4", "flate2"] }
arrow = { version = "54", optional = true, default-features = false }

# Encrypted-workbook reading (optional). Adds no new crates to the tree: the
# AES/SHA primitives are already pulled in by zip's aes-crypto feature, and the
# compound-file container is parsed in-crate.
aes = { version = "0.8", optional = true }
sha1 = { version = "0.10", optional = true }
sha2 = { version = "0.10", optional = true }

# S3 support (optional)
aws-sdk-s3 = { version = "1", optional = true }
aws-config = { version = "1", optional = true, features = ["behavior-version-latest"] }
aws-smithy-types = { version = "1", optional = true }
tokio = { version = "1", optional = true, features = ["rt-multi-thread"] }

[dev-dependencies]
criterion = "0.5"
tempfile = "3.14"

[features]
default = ["fast-hash"]
bench = []
pprof = ["dep:pprof"]
fast-hash = ["dep:ahash", "dep:hashbrown"]
parquet = ["dep:parquet", "dep:arrow"]
decrypt = ["dep:aes", "dep:sha1", "dep:sha2"]
s3 = ["dep:aws-sdk-s3", "dep:aws-config", "dep:aws-smithy-types", "dep:tokio"]

[[bin]]
name = "profile_read"
path = "src/bin/profile_read.rs"
required-features = ["pprof"]

[[bin]]
name = "profile_write"
path = "src/bin/profile_write.rs"
required-features = ["pprof"]

[[bench]]
name = "excel_creation"
harness = false
