[package]
name = "rustypyxl-pyo3"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Python bindings for rustypyxl - openpyxl-compatible Excel library"

[lib]
name = "rustypyxl"
crate-type = ["cdylib"]

[dependencies]
# The core is published as `rustypyxl`, but this crate's own extension module is
# also named `rustypyxl` (see [lib] above), so import the dependency under an
# alias to avoid the name clash. Binding source keeps using `rustypyxl_core::`.
rustypyxl_core = { package = "rustypyxl", path = "../rustypyxl-core", features = ["parquet", "decrypt", "encrypt"] }
pyo3 = { workspace = true }

[features]
default = ["extension-module", "parquet"]
extension-module = ["pyo3/extension-module"]
parquet = ["rustypyxl_core/parquet"]
s3 = ["rustypyxl_core/s3"]
